[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = indlulamithi
description = Reduction software for the Giraffe Spectrograph on the SAAO 1.9m telescope
long_description = Reduction software for the Giraffe Spectrograph on the SAAO 1.9m telescope
author = S. M. Crawford
author_email = crawford@saao.ac.za
license = BSD
url = https://github.com/crawfordsm/indlulamithi
edit_on_github = False
github_project = crawfordsm/indlulamithi
